<resources>
    <string name="app_notification">Click here to add entry</string>
    <string name="notification_reminder_text">It\'s time to write in your diary!</string>
    <string name="entries_list">Entries list</string>
    <string name="calendar">Calendar</string>
    <string name="add_entry">Add entry</string>
    <string name="entry_title">Entry title</string>
    <string name="entry_text">Entry text</string>
    <string name="no_entries_text">Sorry, nothing here.</string>
    <string name="please_wait">Please wait…</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="about_diaro">About Diaro</string>
    <string name="version">Version</string>
    <string name="copyright">Copyright</string>
    <string name="website">Website</string>
    <string name="share">Share</string>
    <string name="delete_entry">Delete this entry?</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="delete_selected_entries">Delete selected entries?</string>
    <string name="delete_selected_photo">Delete this photo?</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo">Take photo</string>
    <string name="select_photo">Select photo</string>
    <string name="error_add_photo">Unable to attach photo</string>
    <string name="tags">Tags</string>
    <string name="date">Date</string>
    <string name="searching_location">Searching for location…</string>
    <string name="chars">Chars</string>
    <string name="words">Words</string>
    <string name="link">Link</string>
    <string name="link_detected_text">Would you like to use this link?</string>
    <string name="deleted">Deleted</string>
    <string name="undo_delete">UNDO</string>
    <string name="no_photos_found">No photos found.</string>
    <string name="set_as_primary">Set as primary</string>
    <string name="primary_photo_changed">Primary photo changed</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="profile">Profile</string>
    <string name="profile_summary">Sign in to get more from Diaro app</string>
    <string name="pro_summary">Cloud sync, export to PDF, TXT, DOCX, ads free, etc.</string>
    <string name="account">Account info</string>
    <string name="settings">Settings</string>
    <string name="no_backup_files_found">No backup files.</string>
    <string name="upload_to_dropbox">Upload to Dropbox</string>
    <string name="download_to_sd">Download to SD</string>
    <string name="not_diaro_backup_file">This is not a Diaro backup file!</string>
    <string name="file_was_deleted">File \'%s\' has been deleted</string>
    <string name="unable_to_delete">Unable to delete</string>
    <string name="settings_confirm_file_delete">Delete file \'%s\'?</string>
    <string name="restore">Restore</string>
    <string name="settings_merge_or_delete">Merge entries from the backup file \'%s\' with current Diaro entries or delete current entries during restore?</string>
    <string name="merge">Merge</string>
    <string name="settings_error_file_not_created">Error occurred. File not created.</string>
    <string name="settings_file_created">\'%s\' file created.</string>
    <string name="settings_restoring_with_ellipsis">Restoring data from file \'%s\'…</string>
    <string name="settings_restore_complete">Restore complete</string>
    <string name="error">Error</string>
    <string name="language">Language</string>
    <string name="settings_ui_color">UI color</string>
    <string name="settings_ui_color_summary">Change app color</string>
    <string name="settings_downloading_file_with_ellipsis">Downloading \'%s\'…</string>
    <string name="settings_download_complete">Download complete</string>
    <string name="settings_upload_complete">Upload complete</string>
    <string name="settings_uploading_file_with_ellipsis">Uploading \'%s\'…</string>
    <string name="report_problem">Report a problem</string>
    <string name="settings_security_code_was_removed">Security code has been removed</string>
    <string name="settings_automatic_location">Automatic location</string>
    <string name="settings_automatic_location_summary">Automatically detect location for new entries (internet connection required)</string>
    <string name="settings_creating_backup_with_ellipsis">Creating backup…</string>
    <string name="settings_backup_tip">Select if you want to encrypt your entries and if to include attachments in a backup file. Please note that attachments may highly increase backup file size.</string>
    <string name="settings_encrypt_entries">Encrypt entries in backup file</string>
    <string name="settings_do_not_backup_attachments">Do not backup attachments</string>
    <string name="settings_security_code">Security code</string>
    <string name="forgot_security_code">Forgot security code?</string>
    <string name="settings_dont_ask_for_security_code_from_widget">Don\'t ask from widget</string>
    <string name="settings_dont_ask_for_security_code_from_widget_summary">Don\'t ask for security code when creating new entry from widget or notification icon</string>
    <string name="settings_support">Help &amp; support</string>
    <string name="settings_support_summary">Report a problem, about, licenses</string>
    <string name="settings_problem_report">Report a problem</string>
    <string name="settings_problem_report_summary">If you have a problem or suggestions for the app, please let us know</string>
    <string name="settings_recommend_to_friend">Recommend to a friend</string>
    <string name="settings_recommend_to_friend_summary">Send an e-mail about Diaro app to a friend</string>
    <string name="settings_notification">Notification icon</string>
    <string name="settings_notification_summary">Show permanent notification icon to create new entry faster</string>
    <string name="settings_first_day_of_week">First day of week</string>
    <string name="settings_tap_entry_to_edit">Tap entry to edit</string>
    <string name="settings_tap_entry_to_edit_summary">Tap entry title or text in entry view mode to edit</string>
    <string name="settings_backup_restore">Backup &amp; restore</string>
    <string name="settings_backup_restore_summary">Backup/restore data (SD/Dropbox)</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_text_size">Text size</string>
    <string name="select_folder">Select folder</string>
    <string name="select_tags">Select tags</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search_hint">Search</string>
    <string name="why_to_sign_in">Why to sign in?</string>
    <string name="cloud_backup_restore">Cloud backup and restore</string>
    <string name="cloud_backup_restore_description">Use your Dropbox account to backup data and restore on other devices</string>
    <string name="cloud_profile_picture">Cloud profile picture</string>
    <string name="cloud_profile_picture_description">Set a profile picture for your account</string>
    <string name="diaro_pro_on_all_your_devices">PREMIUM on all your devices</string>
    <string name="diaro_pro_on_all_your_devices_description">Use Diaro PREMIUM on all your Android, Kindle Fire, iOS devices and Diaro Online (www.diaroapp.com). Your purchase is valid for all your devices &amp; platforms</string>
    <string name="settings_sync">Sync</string>
    <string name="settings_wifi_only">Wi-Fi only</string>
    <string name="all_photos">All photos</string>
    <string name="rate_app">Rate Diaro</string>
    <string name="rate_app_summary">Enjoying the app? We\'d love to get your rating</string>
    <string name="multi_select">Multi select</string>
    <string name="sort">Sort</string>
    <string name="select_location">Select location</string>
    <string name="settings_show_profile_photo">Show profile photo</string>
    <string name="settings_show_profile_photo_summary">Show profile photo in side menu</string>
    <string name="settings_ui_theme">UI theme</string>
    <string name="settings_ui_accent_color">UI accent color</string>
    <string name="settings_ui_accent_color_summary">Change app accent color</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_preferences_summary">Security code, appearance, etc.</string>
    <string name="settings_sync_on_wifi_only_summary">Sync only when connected to Wi-Fi</string>
    <string name="backup_storage">Backup files storage</string>
    <string name="attachments_storage">Attachments storage</string>
    <string name="settings_data">Data</string>
    <string name="settings_data_summary">Sync, backup &amp; restore</string>
    <string name="settings_reminders">Reminders</string>
    <string name="settings_reminders_summary">Set writing reminders</string>
    <string name="storage_directories">Storage directories</string>
    <string name="other_preferences">Other preferences</string>
    <string name="duplicate">Duplicate</string>
    <string name="details">Details</string>
    <string name="settings_security_code_request_period">Request period</string>
    <string name="settings_security_code_request_period_summary">Set security code request period</string>
    <string name="settings_entry_date_style">Entry date style</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="licenses_of_third_party_libraries">Licenses of third-party libraries used in the app</string>
    <string name="licenses">Licenses</string>
    <string name="settings_roaming">Roaming</string>
    <string name="settings_roaming_summary">Allow sync when roaming on a data network. (Data charges may apply)</string>
    <string name="show_sync_notification">Show sync notification</string>
    <string name="show_sync_notification_summary">Show sync notification when the app is in background</string>
    <string name="settings_fingerprint">Fingerprint</string>
    <string name="settings_fingerprint_summary">Allow to use fingerprint to unlock the app</string>
    <string name="settings_show_map_in_entry">Show map in entry</string>
    <string name="settings_show_map_in_entry_summary">Show location map in entry window</string>
    <string name="settings_map_type">Map type</string>
    <string name="show_entry_photos_at_the_top">Show entry photos at the top</string>
    <string name="if_unchecked_shows_photos_at_the_bottom">If unchecked, shows photos at the bottom</string>
    <string name="settings_detect_phone_numbers">Detect phone numbers</string>
    <string name="settings_detect_phone_numbers_summary">Detect phone numbers in entry title and text</string>
    <string name="print">Print</string>
    <string name="settings_units">Units</string>
    <string name="on_this_day">On This Day</string>
    <string name="settings_moods">Moods</string>
    <string name="settings_weather">Weather</string>
    <string name="settings_font_style">Font style</string>
    <string name="settings_screenshot">Allow screenshot</string>
    <string name="draw">Draw</string>
    <string name="stats">Stats</string>
    <string name="atlas">Atlas</string>
    <string name="export_pdf">Export to PDF</string>
    <string name="export_txt">Export to TXT</string>
    <string name="export_csv">Export to CSV</string>
    <string name="export">Export</string>
    <string name="photos">Photos</string>
    <string name="read_aloud">Read Aloud</string>
    <string name="dictate">Dictate</string>
    <string name="display">Display</string>
    <string name="timestamp">Timestamp</string>
    <string name="templates">Templates</string>
    <string name="text_recognition">Text Recognition</string>
    <string name="fast_scroll">Fast Scroll</string>
    <string name="bottom_tab">Bottom Tab</string>
</resources>