<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_show_grid"
        android:icon="@drawable/ic_grid_white_24dp"
        android:title="@string/all_photos"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_set_as_primary"
        android:icon="@drawable/ic_ok_white_24dp"
        android:title="@string/set_as_primary"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_edit"
        android:title="@string/edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_rotate_left"
        android:title="@string/rotate_left"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_rotate_right"
        android:title="@string/rotate_right"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_details"
        android:title="@string/details"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>