<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_select_all"
        android:icon="@drawable/ic_todo_list_white_24dp"
        android:title="@string/select_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_unselect_all"
        android:icon="@drawable/ic_unselect_all_white_24dp"
        android:title="@string/unselect_all"
        app:showAsAction="always" />


    <item
        android:id="@+id/item_select_folder"
        android:icon="@drawable/ic_folder_white_24dp"
        android:title="@string/select_folder"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_select_tags"
        android:icon="@drawable/ic_tag_white_24dp"
        android:title="@string/select_tags"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_select_location"
        android:icon="@drawable/ic_place_white_24dp"
        android:title="@string/select_location"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_print"
        android:icon="@drawable/ic_print_white_24dp"
        android:title="@string/print"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>